Se soluciona envio de correos en diferentes vistas

--- a/API/Web.config
+++ b/API/Web.config
@@ -34,8 +34,8 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <!--<add name="MiConexion" connectionString="Server=vacunapp.c92ubwakzjve.sa-east-1.rds.amazonaws.com;Port=5432;Database=vacunApp;User Id=postgres; Password=vacun2021_app;" providerName="Npgsql" />-->
-    <add name="MiConexion" connectionString="Server=localhost;Port=5432;Database=vacunApp;User Id=postgres; Password=admin;" providerName="Npgsql" />
+    <add name="MiConexion" connectionString="Server=vacunapp.c92ubwakzjve.sa-east-1.rds.amazonaws.com;Port=5432;Database=vacunApp;User Id=postgres; Password=vacun2021_app;" providerName="Npgsql" />
+    <!--<add name="MiConexion" connectionString="Server=localhost;Port=5432;Database=vacunApp;User Id=postgres; Password=admin;" providerName="Npgsql" />-->
   </connectionStrings>
   <system.webServer>
     <handlers>
