--- a/API/Web.config
+++ b/API/Web.config
@@ -15,10 +15,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="JWT_SECRET_KEY"     value="clave-secreta-api"/>
-    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:44354"/>
-    <add key="JWT_ISSUER_TOKEN"   value="http://localhost:44354"/>
-    <add key="JWT_EXPIRE_MINUTES" value="5"/>
+    <add key="JWT_SECRET_KEY" value="clave-secreta-api" />
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:44354" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:44354" />
+    <add key="JWT_EXPIRE_MINUTES" value="5" />
    
   </appSettings>
   <!--
@@ -34,8 +34,8 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <connectionStrings>
-    <add name="MiConexion" connectionString="Server=vacunapp.c92ubwakzjve.sa-east-1.rds.amazonaws.com;Port=5432;Database=vacunApp;User Id=postgres; Password=vacun2021_app;" providerName="Npgsql" />
-    <!--<add name="MiConexion" connectionString="Server=localhost;Port=5432;Database=vacunApp;User Id=postgres; Password=admin;" providerName="Npgsql" />-->
+    <!--<add name="MiConexion" connectionString="Server=vacunapp.c92ubwakzjve.sa-east-1.rds.amazonaws.com;Port=5432;Database=vacunApp;User Id=postgres; Password=vacun2021_app;" providerName="Npgsql" />-->
+    <add name="MiConexion" connectionString="Server=localhost;Port=5432;Database=vacunApp;User Id=postgres; Password=admin;" providerName="Npgsql" />
   </connectionStrings>
   <system.webServer>
     <handlers>
@@ -81,7 +81,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
@@ -94,6 +94,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
